src/main/java/application/testData/invalidRandomAddresses/hard/completedIncorrectly/RandomAddressesWithFieldCompletedTwiceWithDifferentData.java
package application.testData.invalidRandomAddresses.hard.completedIncorrectly;

public class RandomAddressesWithFieldCompletedTwiceWithDifferentData {
    // intr o adresa 2 cityuri in fieldul corespunzator sau nu
}
